--- a/htdocs/static/scss/areas/_page-law-show.scss
+++ b/htdocs/static/scss/areas/_page-law-show.scss
@@ -1,4 +1,5 @@
-/* ################################################################################
+/*
+################################################################################
 # Law page
 ################################################################################
 */
