Rename "code" to "browse" and "use the API" to "download"
Closes #311.

--- a/htdocs/static/css/application.css
+++ b/htdocs/static/css/application.css
@@ -1940,14 +1940,14 @@ header#page_header {
               text-align: left;
               width: 100%; } }
           /* line 181, ../scss/areas/_header.scss */
-          header#page_header nav#main_navigation ul li a#the_code {
-            background-image: url('/static/images/nav-icons/nav_the-code.svg?1368993938'); }
+          header#page_header nav#main_navigation ul li a#browse {
+            background-image: url('/static/images/nav-icons/nav_browse.svg?1368993938'); }
             /* line 183, ../scss/areas/_header.scss */
-            header#page_header nav#main_navigation ul li a#the_code:hover {
-              background-image: url('/static/images/nav-icons/nav_the-code-hover.svg?1368993938'); }
+            header#page_header nav#main_navigation ul li a#browse:hover {
+              background-image: url('/static/images/nav-icons/nav_browse-hover.svg?1368993938'); }
             /* line 186, ../scss/areas/_header.scss */
-            .lt-ie9 header#page_header nav#main_navigation ul li a#the_code {
-              background-image: url('/static/images/nav-icons/fallbacks/nav_the-code.png?1368993938'); }
+            .lt-ie9 header#page_header nav#main_navigation ul li a#browse {
+              background-image: url('/static/images/nav-icons/fallbacks/nav_browse.png?1368993938'); }
           /* line 191, ../scss/areas/_header.scss */
           header#page_header nav#main_navigation ul li a#court_cases {
             background-image: url('/static/images/nav-icons/nav_court-cases.svg?1368993938'); }
@@ -1967,14 +1967,14 @@ header#page_header {
             .lt-ie9 header#page_header nav#main_navigation ul li a#about_us {
               background-image: url('/static/images/nav-icons/fallbacks/nav_about-us.png?1368993938'); }
           /* line 212, ../scss/areas/_header.scss */
-          header#page_header nav#main_navigation ul li a#use_the_api {
-            background-image: url('/static/images/nav-icons/nav_use-the-api.svg?1368993938'); }
+          header#page_header nav#main_navigation ul li a#download {
+            background-image: url('/static/images/nav-icons/nav_download.svg?1368993938'); }
             /* line 214, ../scss/areas/_header.scss */
-            header#page_header nav#main_navigation ul li a#use_the_api:hover {
-              background-image: url('/static/images/nav-icons/nav_use-the-api-hover.svg?1368993938'); }
+            header#page_header nav#main_navigation ul li a#download:hover {
+              background-image: url('/static/images/nav-icons/nav_download-hover.svg?1368993938'); }
             /* line 217, ../scss/areas/_header.scss */
-            .lt-ie9 header#page_header nav#main_navigation ul li a#use_the_api {
-              background-image: url('/static/images/nav-icons/fallbacks/nav_use-the-api.png?1368993938'); }
+            .lt-ie9 header#page_header nav#main_navigation ul li a#download {
+              background-image: url('/static/images/nav-icons/fallbacks/nav_download.png?1368993938'); }
   @media only screen and (min-width: 769px) {
     /* line 226, ../scss/areas/_header.scss */
     .inside header#page_header {
