Rename "code" to "browse" and "use the API" to "download"
Closes #311.

--- a/htdocs/static/css/application.css
+++ b/htdocs/static/css/application.css
@@ -2010,14 +2010,14 @@ header#page_header {
               text-align: left;
               width: 100%; } }
           /* line 209, ../scss/areas/_header.scss */
-          header#page_header nav#main_navigation ul li a#the_code {
-            background: url('/static/images/nav-icons/nav_the-code.svg?1376337969'); }
+          header#page_header nav#main_navigation ul li a#browse {
+            background-image: url('/static/images/nav-icons/nav_browse.svg?1376337970'); }
             /* line 211, ../scss/areas/_header.scss */
-            header#page_header nav#main_navigation ul li a#the_code:hover {
-              background: url('/static/images/nav-icons/nav_the-code-hover.svg?1376337969'); }
+            header#page_header nav#main_navigation ul li a#browse:hover {
+              background-image: url('/static/images/nav-icons/nav_browse-hover.svg?1376337970'); }
             /* line 214, ../scss/areas/_header.scss */
-            .lt-ie9 header#page_header nav#main_navigation ul li a#the_code {
-              background: url('/static/images/nav-icons/fallbacks/nav_the-code.png?1376337969'); }
+            .lt-ie9 header#page_header nav#main_navigation ul li a#browse {
+              background-image: url('/static/images/nav-icons/fallbacks/nav_browse.png?1376337970'); }
           /* line 219, ../scss/areas/_header.scss */
           header#page_header nav#main_navigation ul li a#court_cases {
             background: url('/static/images/nav-icons/nav_court-cases.svg?1376337970'); }
@@ -2037,14 +2037,14 @@ header#page_header {
             .lt-ie9 header#page_header nav#main_navigation ul li a#about_us {
               background: url('/static/images/nav-icons/fallbacks/nav_about-us.png?1376337970'); }
           /* line 240, ../scss/areas/_header.scss */
-          header#page_header nav#main_navigation ul li a#use_the_api {
-            background: url('/static/images/nav-icons/nav_use-the-api.svg?1376337969'); }
+          header#page_header nav#main_navigation ul li a#download {
+            background-image: url('/static/images/nav-icons/nav_download.svg?1376337970'); }
             /* line 242, ../scss/areas/_header.scss */
-            header#page_header nav#main_navigation ul li a#use_the_api:hover {
-              background: url('/static/images/nav-icons/nav_use-the-api-hover.svg?1376337969'); }
+            header#page_header nav#main_navigation ul li a#download:hover {
+              background-image: url('/static/images/nav-icons/nav_download-hover.svg?1376337970'); }
             /* line 245, ../scss/areas/_header.scss */
-            .lt-ie9 header#page_header nav#main_navigation ul li a#use_the_api {
-              background: url('/static/images/nav-icons/fallbacks/nav_use-the-api.png?1376337969'); }
+            .lt-ie9 header#page_header nav#main_navigation ul li a#download {
+              background-image: url('/static/images/nav-icons/fallbacks/nav_download.png?1376337970'); }
   @media only screen and (min-width: 769px) {
     /* line 254, ../scss/areas/_header.scss */
     .inside header#page_header {
