--- a/htdocs/static/scss/areas/_page-law-show.scss
+++ b/htdocs/static/scss/areas/_page-law-show.scss
@@ -7,6 +7,7 @@
 .law {
   section#main_content {
     overflow: hidden;
+    padding-bottom: 150px; // Footer fixed hack
   }
 
   .nest {
@@ -55,15 +56,15 @@
     section.indent, section.indent-1 {
       margin-left: 15px;
     }
-    
+
     section.indent-2 {
       margin-left: 30px;
     }
-    
+
     section.indent-3 {
       margin-left: 45px;
     }
-    
+
     section.indent-4 {
       margin-left: 60px;
     }
@@ -71,7 +72,7 @@
     p {
       margin: 0 0 20px 0;
     }
-    
+
     pre.table {
       margin: 0 0 20px 0;
       font-size: .75em;
