Porting QTip to SCSS, adding variables for key values
I didn't add variables for all the color possibilities provided in qTip itself. I figure we'd want one type per site. Let me know if you need me to extract the rest of the colors to variables.

--- a/htdocs/static/scss/application.scss
+++ b/htdocs/static/scss/application.scss
@@ -58,6 +58,9 @@
 @import "components/_modal.scss";
 @import "components/_keyboard-shortcuts.scss";
 
+/* Jquery Plugins */
+@import "vendor/jquery.qtip";
+
 // Areas
 @import "areas/_header.scss";
 @import "areas/_breadcrumbs.scss";
