--- a/htdocs/static/css/application.css
+++ b/htdocs/static/css/application.css
@@ -1806,6 +1806,592 @@ section#sidebar section#keyboard-guide {
   width: 9em;
   clear: both; }
 
+/* Jquery Plugins */
+/*
+ * qTip2 - Pretty powerful tooltips - v2.0.1-108
+ * http://qtip2.com
+ *
+ * Copyright (c) 2013 Craig Michael Thompson
+ * Released under the MIT, GPL licenses
+ * http://jquery.org/license
+ *
+ * Date: Fri Jun 14 2013 10:32 UTC+0000
+ * Plugins: tips modal viewport svg imagemap ie6
+ * Styles: basic css3
+ */
+/* line 13, ../scss/vendor/_jquery.qtip.scss */
+.qtip {
+  position: absolute;
+  left: -28000px;
+  top: -28000px;
+  display: none;
+  max-width: 280px;
+  min-width: 50px;
+  font-size: 10.5px;
+  line-height: 12px;
+  direction: ltr;
+  box-shadow: none;
+  padding: 0; }
+
+/* line 31, ../scss/vendor/_jquery.qtip.scss */
+.qtip-content {
+  position: relative;
+  padding: 5px 9px;
+  overflow: hidden;
+  text-align: left;
+  word-wrap: break-word; }
+
+/* line 40, ../scss/vendor/_jquery.qtip.scss */
+.qtip-titlebar {
+  position: relative;
+  padding: 5px 35px 5px 10px;
+  overflow: hidden;
+  border-width: 0 0 1px;
+  font-weight: bold; }
+
+/* line 49, ../scss/vendor/_jquery.qtip.scss */
+.qtip-titlebar + .qtip-content {
+  border-top-width: 0 !important; }
+
+/* Default close button class */
+/* line 52, ../scss/vendor/_jquery.qtip.scss */
+.qtip-close {
+  position: absolute;
+  right: -9px;
+  top: -9px;
+  cursor: pointer;
+  outline: medium none;
+  border-width: 1px;
+  border-style: solid;
+  border-color: transparent; }
+
+/* line 64, ../scss/vendor/_jquery.qtip.scss */
+.qtip-titlebar .qtip-close {
+  right: 4px;
+  top: 50%;
+  margin-top: -9px; }
+
+/* line 69, ../scss/vendor/_jquery.qtip.scss */
+* html .qtip-titlebar .qtip-close {
+  top: 16px; }
+
+/* IE fix */
+/* line 72, ../scss/vendor/_jquery.qtip.scss */
+.qtip-titlebar .ui-icon,
+.qtip-icon .ui-icon {
+  display: block;
+  text-indent: -1000em;
+  direction: ltr; }
+
+/* line 78, ../scss/vendor/_jquery.qtip.scss */
+.qtip-icon, .qtip-icon .ui-icon {
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  text-decoration: none; }
+
+/* line 85, ../scss/vendor/_jquery.qtip.scss */
+.qtip-icon .ui-icon {
+  width: 18px;
+  height: 14px;
+  line-height: 14px;
+  text-align: center;
+  text-indent: 0;
+  font: normal bold 10px/13px Tahoma,sans-serif;
+  color: inherit;
+  background: transparent none no-repeat -100em -100em; }
+
+/* Applied to 'focused' tooltips e.g. most recently displayed/interacted with */
+/* Applied on hover of tooltips i.e. added/removed on mouseenter/mouseleave respectively */
+/* Default tooltip style */
+/* line 115, ../scss/vendor/_jquery.qtip.scss */
+.qtip-default {
+  border-width: 1px;
+  border-style: solid;
+  border-color: #f1d031;
+  background-color: #ffffa3;
+  color: #555555; }
+
+/* line 124, ../scss/vendor/_jquery.qtip.scss */
+.qtip-default .qtip-titlebar {
+  background-color: #ffef93; }
+
+/* line 128, ../scss/vendor/_jquery.qtip.scss */
+.qtip-default .qtip-icon {
+  border-color: #cccccc;
+  background: #f1f1f1;
+  color: #777777; }
+
+/* line 134, ../scss/vendor/_jquery.qtip.scss */
+.qtip-default .qtip-titlebar .qtip-close {
+  border-color: #aaaaaa;
+  color: #111111; }
+
+/* Light tooltip style */
+/* line 142, ../scss/vendor/_jquery.qtip.scss */
+.qtip-light {
+  background-color: white;
+  border-color: #E2E2E2;
+  color: #454545; }
+
+/* line 148, ../scss/vendor/_jquery.qtip.scss */
+.qtip-light .qtip-titlebar {
+  background-color: #f1f1f1; }
+
+/* Dark tooltip style */
+/* line 154, ../scss/vendor/_jquery.qtip.scss */
+.qtip-dark {
+  background-color: #505050;
+  border-color: #303030;
+  color: #f3f3f3; }
+
+/* line 160, ../scss/vendor/_jquery.qtip.scss */
+.qtip-dark .qtip-titlebar {
+  background-color: #404040; }
+
+/* line 164, ../scss/vendor/_jquery.qtip.scss */
+.qtip-dark .qtip-icon {
+  border-color: #444; }
+
+/* line 168, ../scss/vendor/_jquery.qtip.scss */
+.qtip-dark .qtip-titlebar .ui-state-hover {
+  border-color: #303030; }
+
+/* Cream tooltip style */
+/* line 174, ../scss/vendor/_jquery.qtip.scss */
+.qtip-cream {
+  background-color: #FBF7AA;
+  border-color: #F9E98E;
+  color: #A27D35; }
+
+/* line 180, ../scss/vendor/_jquery.qtip.scss */
+.qtip-cream .qtip-titlebar {
+  background-color: #F0DE7D; }
+
+/* line 184, ../scss/vendor/_jquery.qtip.scss */
+.qtip-cream .qtip-close .qtip-icon {
+  background-position: -82px 0; }
+
+/* Red tooltip style */
+/* line 190, ../scss/vendor/_jquery.qtip.scss */
+.qtip-red {
+  background-color: #F78B83;
+  border-color: #D95252;
+  color: #912323; }
+
+/* line 196, ../scss/vendor/_jquery.qtip.scss */
+.qtip-red .qtip-titlebar {
+  background-color: #F06D65; }
+
+/* line 200, ../scss/vendor/_jquery.qtip.scss */
+.qtip-red .qtip-close .qtip-icon {
+  background-position: -102px 0; }
+
+/* line 204, ../scss/vendor/_jquery.qtip.scss */
+.qtip-red .qtip-icon {
+  border-color: #D95252; }
+
+/* line 208, ../scss/vendor/_jquery.qtip.scss */
+.qtip-red .qtip-titlebar .ui-state-hover {
+  border-color: #D95252; }
+
+/* Green tooltip style */
+/* line 214, ../scss/vendor/_jquery.qtip.scss */
+.qtip-green {
+  background-color: #CAED9E;
+  border-color: #90D93F;
+  color: #3F6219; }
+
+/* line 220, ../scss/vendor/_jquery.qtip.scss */
+.qtip-green .qtip-titlebar {
+  background-color: #B0DE78; }
+
+/* line 224, ../scss/vendor/_jquery.qtip.scss */
+.qtip-green .qtip-close .qtip-icon {
+  background-position: -42px 0; }
+
+/* Blue tooltip style */
+/* line 230, ../scss/vendor/_jquery.qtip.scss */
+.qtip-blue {
+  background-color: #E5F6FE;
+  border-color: #ADD9ED;
+  color: #5E99BD; }
+
+/* line 236, ../scss/vendor/_jquery.qtip.scss */
+.qtip-blue .qtip-titlebar {
+  background-color: #D0E9F5; }
+
+/* line 240, ../scss/vendor/_jquery.qtip.scss */
+.qtip-blue .qtip-close .qtip-icon {
+  background-position: -2px 0; }
+
+/* line 246, ../scss/vendor/_jquery.qtip.scss */
+.qtip-shadow {
+  -webkit-box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.15);
+  box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.15); }
+
+/* Add rounded corners to your tooltips in: FF3+, Chrome 2+, Opera 10.6+, IE9+, Safari 2+ */
+/* line 255, ../scss/vendor/_jquery.qtip.scss */
+.qtip-rounded,
+.qtip-tipsy,
+.qtip-bootstrap {
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px; }
+
+/* line 261, ../scss/vendor/_jquery.qtip.scss */
+.qtip-rounded .qtip-titlebar {
+  -moz-border-radius: 4px 4px 0 0;
+  -webkit-border-radius: 4px 4px 0 0;
+  border-radius: 4px 4px 0 0; }
+
+/* Youtube tooltip style */
+/* line 268, ../scss/vendor/_jquery.qtip.scss */
+.qtip-youtube {
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  -webkit-box-shadow: 0 0 3px #333;
+  -moz-box-shadow: 0 0 3px #333;
+  box-shadow: 0 0 3px #333;
+  color: white;
+  border-width: 0;
+  background: #4A4A4A;
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #4a4a4a), color-stop(100%, black));
+  background-image: -webkit-linear-gradient(top, #4a4a4a 0, black 100%);
+  background-image: -moz-linear-gradient(top, #4a4a4a 0, black 100%);
+  background-image: -ms-linear-gradient(top, #4a4a4a 0, black 100%);
+  background-image: -o-linear-gradient(top, #4a4a4a 0, black 100%); }
+
+/* line 288, ../scss/vendor/_jquery.qtip.scss */
+.qtip-youtube .qtip-titlebar {
+  background-color: #4A4A4A;
+  background-color: rgba(0, 0, 0, 0); }
+
+/* line 293, ../scss/vendor/_jquery.qtip.scss */
+.qtip-youtube .qtip-content {
+  padding: .75em;
+  font: 12px arial,sans-serif;
+  filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=0,StartColorStr=#4a4a4a,EndColorStr=#000000);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Gradient(GradientType=0,StartColorStr=#4a4a4a,EndColorStr=#000000);"; }
+
+/* line 301, ../scss/vendor/_jquery.qtip.scss */
+.qtip-youtube .qtip-icon {
+  border-color: #222; }
+
+/* line 305, ../scss/vendor/_jquery.qtip.scss */
+.qtip-youtube .qtip-titlebar .ui-state-hover {
+  border-color: #303030; }
+
+/* jQuery TOOLS Tooltip style */
+/* line 311, ../scss/vendor/_jquery.qtip.scss */
+.qtip-jtools {
+  background: #232323;
+  background: rgba(0, 0, 0, 0.7);
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#717171), to(#232323));
+  background-image: -moz-linear-gradient(top, #717171, #232323);
+  background-image: -webkit-linear-gradient(top, #717171, #232323);
+  background-image: -ms-linear-gradient(top, #717171, #232323);
+  background-image: -o-linear-gradient(top, #717171, #232323);
+  border: 2px solid #ddd;
+  border: 2px solid #f1f1f1;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  -webkit-box-shadow: 0 0 12px #333;
+  -moz-box-shadow: 0 0 12px #333;
+  box-shadow: 0 0 12px #333; }
+
+/* IE Specific */
+/* line 333, ../scss/vendor/_jquery.qtip.scss */
+.qtip-jtools .qtip-titlebar {
+  background-color: transparent;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#717171,endColorstr=#4A4A4A);
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#717171,endColorstr=#4A4A4A)"; }
+
+/* line 338, ../scss/vendor/_jquery.qtip.scss */
+.qtip-jtools .qtip-content {
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#4A4A4A,endColorstr=#232323);
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#4A4A4A,endColorstr=#232323)"; }
+
+/* line 344, ../scss/vendor/_jquery.qtip.scss */
+.qtip-jtools .qtip-titlebar,
+.qtip-jtools .qtip-content {
+  background: transparent;
+  color: white;
+  border: 0 dashed transparent; }
+
+/* line 350, ../scss/vendor/_jquery.qtip.scss */
+.qtip-jtools .qtip-icon {
+  border-color: #555; }
+
+/* line 354, ../scss/vendor/_jquery.qtip.scss */
+.qtip-jtools .qtip-titlebar .ui-state-hover {
+  border-color: #333; }
+
+/* Cluetip style */
+/* line 360, ../scss/vendor/_jquery.qtip.scss */
+.qtip-cluetip {
+  -webkit-box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.4);
+  -moz-box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.4);
+  box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.4);
+  background-color: #D9D9C2;
+  color: #111;
+  border: 0 dashed transparent; }
+
+/* line 370, ../scss/vendor/_jquery.qtip.scss */
+.qtip-cluetip .qtip-titlebar {
+  background-color: #87876A;
+  color: white;
+  border: 0 dashed transparent; }
+
+/* line 376, ../scss/vendor/_jquery.qtip.scss */
+.qtip-cluetip .qtip-icon {
+  border-color: #808064; }
+
+/* line 380, ../scss/vendor/_jquery.qtip.scss */
+.qtip-cluetip .qtip-titlebar .ui-state-hover {
+  border-color: #696952;
+  color: #696952; }
+
+/* Tipsy style */
+/* line 387, ../scss/vendor/_jquery.qtip.scss */
+.qtip-tipsy {
+  background: black;
+  background: rgba(0, 0, 0, 0.87);
+  color: white;
+  border: 0 solid transparent;
+  font-size: 11px;
+  font-family: 'Lucida Grande', sans-serif;
+  font-weight: bold;
+  line-height: 16px;
+  text-shadow: 0 1px black; }
+
+/* line 401, ../scss/vendor/_jquery.qtip.scss */
+.qtip-tipsy .qtip-titlebar {
+  padding: 6px 35px 0 10px;
+  background-color: transparent; }
+
+/* line 406, ../scss/vendor/_jquery.qtip.scss */
+.qtip-tipsy .qtip-content {
+  padding: 6px 10px; }
+
+/* line 410, ../scss/vendor/_jquery.qtip.scss */
+.qtip-tipsy .qtip-icon {
+  border-color: #222;
+  text-shadow: none; }
+
+/* line 415, ../scss/vendor/_jquery.qtip.scss */
+.qtip-tipsy .qtip-titlebar .ui-state-hover {
+  border-color: #303030; }
+
+/* Tipped style */
+/* line 421, ../scss/vendor/_jquery.qtip.scss */
+.qtip-tipped {
+  border: 3px solid #959FA9;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
+  border-radius: 3px;
+  background-color: #F9F9F9;
+  color: #454545;
+  font-weight: normal;
+  font-family: serif; }
+
+/* line 435, ../scss/vendor/_jquery.qtip.scss */
+.qtip-tipped .qtip-titlebar {
+  border-bottom-width: 0;
+  color: white;
+  background: #3A79B8;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#3a79b8), to(#2e629d));
+  background-image: -webkit-linear-gradient(top, #3a79b8, #2e629d);
+  background-image: -moz-linear-gradient(top, #3a79b8, #2e629d);
+  background-image: -ms-linear-gradient(top, #3a79b8, #2e629d);
+  background-image: -o-linear-gradient(top, #3a79b8, #2e629d);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#3A79B8,endColorstr=#2E629D);
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#3A79B8,endColorstr=#2E629D)"; }
+
+/* line 449, ../scss/vendor/_jquery.qtip.scss */
+.qtip-tipped .qtip-icon {
+  border: 2px solid #285589;
+  background: #285589; }
+
+/* line 454, ../scss/vendor/_jquery.qtip.scss */
+.qtip-tipped .qtip-icon .ui-icon {
+  background-color: #FBFBFB;
+  color: #555; }
+
+/**
+ * Twitter Bootstrap style.
+ *
+ * Tested with IE 8, IE 9, Chrome 18, Firefox 9, Opera 11.
+ * Does not work with IE 7.
+ */
+/* line 466, ../scss/vendor/_jquery.qtip.scss */
+.qtip-bootstrap {
+  /** Taken from Bootstrap body */
+  font-size: 14px;
+  line-height: 20px;
+  color: #333333;
+  /** Taken from Bootstrap .popover */
+  padding: 1px;
+  background-color: white;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  -webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+  -webkit-background-clip: padding-box;
+  -moz-background-clip: padding;
+  background-clip: padding-box; }
+
+/* line 488, ../scss/vendor/_jquery.qtip.scss */
+.qtip-bootstrap .qtip-titlebar {
+  /** Taken from Bootstrap .popover-title */
+  padding: 8px 14px;
+  margin: 0;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 18px;
+  background-color: #f7f7f7;
+  border-bottom: 1px solid #ebebeb;
+  -webkit-border-radius: 5px 5px 0 0;
+  -moz-border-radius: 5px 5px 0 0;
+  border-radius: 5px 5px 0 0; }
+
+/* line 502, ../scss/vendor/_jquery.qtip.scss */
+.qtip-bootstrap .qtip-titlebar .qtip-close {
+  /**
+   * Overrides qTip2:
+   * .qtip-titlebar .qtip-close{
+   *   [...]
+   *   right: 4px;
+   *   top: 50%;
+   *   [...]
+   *   border-style: solid;
+   * }
+   */
+  right: 11px;
+  top: 45%;
+  border-style: none; }
+
+/* line 518, ../scss/vendor/_jquery.qtip.scss */
+.qtip-bootstrap .qtip-content {
+  /** Taken from Bootstrap .popover-content */
+  padding: 9px 14px; }
+
+/* line 523, ../scss/vendor/_jquery.qtip.scss */
+.qtip-bootstrap .qtip-icon {
+  /**
+   * Overrides qTip2:
+   * .qtip-default .qtip-icon {
+   *   border-color: #CCC;
+   *   background: #F1F1F1;
+   *   color: #777;
+   * }
+   */
+  background: transparent; }
+
+/* line 535, ../scss/vendor/_jquery.qtip.scss */
+.qtip-bootstrap .qtip-icon .ui-icon {
+  /**
+   * Overrides qTip2:
+   * .qtip-icon .ui-icon{
+   *   width: 18px;
+   *   height: 14px;
+   * }
+   */
+  width: auto;
+  height: auto;
+  /* Taken from Bootstrap .close */
+  float: right;
+  font-size: 20px;
+  font-weight: bold;
+  line-height: 18px;
+  color: black;
+  text-shadow: 0 1px 0 white;
+  opacity: 0.2;
+  filter: alpha(opacity=20); }
+
+/* line 557, ../scss/vendor/_jquery.qtip.scss */
+.qtip-bootstrap .qtip-icon .ui-icon:hover {
+  /* Taken from Bootstrap .close:hover */
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+  opacity: 0.4;
+  filter: alpha(opacity=40); }
+
+/* IE9 fix - removes all filters */
+/* line 569, ../scss/vendor/_jquery.qtip.scss */
+.qtip:not(.ie9haxors) div.qtip-content,
+.qtip:not(.ie9haxors) div.qtip-titlebar {
+  filter: none;
+  -ms-filter: none; }
+
+/* line 576, ../scss/vendor/_jquery.qtip.scss */
+.qtip .qtip-tip {
+  margin: 0 auto;
+  overflow: hidden;
+  z-index: 10; }
+
+/* Opera bug #357 - Incorrect tip position
+https://github.com/Craga89/qTip2/issues/367 */
+/* line 585, ../scss/vendor/_jquery.qtip.scss */
+x:-o-prefocus, .qtip .qtip-tip {
+  visibility: hidden; }
+
+/* line 591, ../scss/vendor/_jquery.qtip.scss */
+.qtip .qtip-tip,
+.qtip .qtip-tip .qtip-vml,
+.qtip .qtip-tip canvas {
+  position: absolute;
+  color: #123456;
+  background: transparent;
+  border: 0 dashed transparent; }
+
+/* line 599, ../scss/vendor/_jquery.qtip.scss */
+.qtip .qtip-tip canvas {
+  top: 0;
+  left: 0; }
+
+/* line 601, ../scss/vendor/_jquery.qtip.scss */
+.qtip .qtip-tip .qtip-vml {
+  behavior: url(#default#VML);
+  display: inline-block;
+  visibility: visible; }
+
+/* line 607, ../scss/vendor/_jquery.qtip.scss */
+#qtip-overlay {
+  position: fixed;
+  left: -10000em;
+  top: -10000em; }
+
+/* Applied to modals with show.modal.blur set to true */
+/* line 614, ../scss/vendor/_jquery.qtip.scss */
+#qtip-overlay.blurs {
+  cursor: pointer; }
+
+/* Change opacity of overlay here */
+/* line 617, ../scss/vendor/_jquery.qtip.scss */
+#qtip-overlay div {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=70)"; }
+
+/* line 631, ../scss/vendor/_jquery.qtip.scss */
+.qtipmodal-ie6fix {
+  position: absolute !important; }
+
 /* line 1, ../scss/areas/_header.scss */
 header#page_header {
   background-color: #137da1;
